# LLM_Chat-bot

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  run.md
backend/: requirements.txt
backend/app/: main.py
backend/app/api/: chat.py  conversations.py  export.py  models.py  prompts.py  search.py  stats.py  users.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/db/: database.py  init_db.py  models.py
backend/app/llm/: model_factory.py
backend/app/schemas/: chat.py  conversation.py  model.py  prompt.py  search.py  stats.py  user.py
backend/app/services/: chat_service.py  conversation_service.py  export_service.py  model_service.py  prompt_service.py  search_service.py  stats_service.py  user_service.py
backend/tests/: conftest.py  test_chatbot_api.py
config/: logging.yaml  presets.yaml
docs/: AI与Prompt工作日志.md  Git命令与操作教学.md  uv包管理器教学文档.md  实施步骤计划.md  需求变更与扩展登记.md  需求说明文档.md
frontend/: api_client.py  streamlit_app.py
frontend/components/: chat_box.py
scripts/: chat_engine_demo.py  init_db.py
src/: __init__.py  config_manager.py  main.py
src/core/: __init__.py  chat_engine.py  preset_manager.py  user_manager.py
src/interface/: __init__.py  ui_protocol.py
src/models/: __init__.py  schemas.py
src/storage/: __init__.py  base.py  factory.py  sqlite_backend.py
src/ui/: __init__.py
src/ui/tui/: __init__.py  app.py  chat_view.py  menu_view.py  (+1 more)
tests/: conftest.py  test_step2_skeleton.py  test_step3_sqlite.py  test_step4_user_manager.py  test_step5_preset_manager.py  test_step6_chat_engine.py
