# pyproject.toml - langchain-chat project configuration

[project]
name = "langchain-chat"
version = "0.1.0"
description = "基于 LangChain 的多轮会话系统（教学项目）"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "langchain>=0.2.6",
    "langchain-openai>=0.1.13",
    "loguru>=0.7.2",
    "pandas>=2.2.0",
    "prompt-toolkit>=3.0.47",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "requests>=2.32.0",
    "rich>=13.7.1",
    "sqlalchemy>=2.0.30",
    "streamlit>=1.36.0",
    "tenacity>=8.3.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.5.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
